--- a/src/components/Home/Section/Section.module.css
+++ b/src/components/Home/Section/Section.module.css
@@ -27,3 +27,11 @@
     z-index: 2;
   }
   
+
+  @media (max-height: 715px) {
+    .section {
+      height: auto;
+    
+    
+      }
+  }
